--- a/sama.html
+++ b/sama.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root"></div>
-    <script src="./main.js"></script>
+    <button aria-label="Close the modal"></button>
 </body>
 </html>
